--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "PORT=1000 next start",
     "lint": "next lint"
   },
   "dependencies": {
@@ -16,7 +16,8 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-input-mask": "^2.0.4"
+    "react-input-mask": "^2.0.4",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@types/node": "^20",
